<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="app_name">Honeybee</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="email">Email</string>
    <string name="error_required_field">Required field</string>
    <string name="login">Login</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_google">Google+</string>
    <string name="login_twitter">Sign up with Twitter</string>
    <string name="login_skip">Skip Login</string>
    <string name="login_or">Or</string>
    <string name="login_sign_up">Click here to sign up with email!</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_nickname">Nickname</string>
    <string name="sign_up_email">E-mail</string>
    <string name="sign_up_birthday">Birthday</string>
    <string name="sign_up_confirm">Confirm</string>
    <string name="user_gender_male">Male</string>
    <string name="user_gender_female">Female</string>
    <string name="error_minimum_size">Set a value higher than %1$s characters</string>
    <string name="error_valid_email">Set a valid e-mail</string>
    <string name="label_home">Main</string>
    <string name="load_message_wait">Wait...</string>
    <string name="main_stories">Stories</string>
    <string name="main_polls">Challenges</string>
    <string name="main_news_feed">Program News</string>
    <string name="main_menu_home">Main</string>
    <string name="main_menu_chat">Chat</string>
    <string name="main_menu_group_unicef">Unicef</string>
    <string name="main_menu_subitem_buy_goods">Buy goods</string>
    <string name="main_menu_subitem_embassadors">Ambassadors</string>
    <string name="base_menu_open_drawer">Open Menu</string>
    <string name="base_menu_close_drawer">Close Menu</string>
    <string name="stories_list_item_author">by %1$s</string>
    <string name="stories_list_item_contributions">%1$s contributions</string>
    <string name="story_item_read_full_story">See full story</string>
    <string name="label_new_story">New Story</string>
    <string name="create_story_insert_cover">Insert a cover picture</string>
    <string name="create_story_insert_title">Insert a title</string>
    <string name="create_story_insert_story_content">Tell us what\'s going on</string>
    <string name="create_story_title_media">Insert Media</string>
    <string name="create_story_add_markers">Add markers</string>
    <string name="media_remove">Remove</string>
    <string name="title_media_source">Choose a media source:</string>
    <string name="create_story_insert_cover_title">Insert a cover picture</string>
    <string name="create_story_title_cover_image">Choose the cover picture source:</string>
    <string name="action_title_publish">Publish</string>
    <string name="action_label_search">Search</string>
    <string name="create_story_add_marker_title">New marker</string>
    <string name="label_story_view">Story View</string>
    <string name="story_view_contribute">Contribute to this story</string>
    <string name="story_contribution_add">Add a contribution</string>
    <string name="polls_participate">Answer</string>
    <string name="polls_current">Current challenge</string>
    <string name="polls_responded_info">%1$s responded out of %2$s polled</string>
    <string name="polls_response_rate">%1$s%% response rate</string>
    <string name="polls_see_results">See results</string>
    <string name="news_more_statistics">More statistics</string>
    <string name="news_ureporters">U-Reporters</string>
    <string name="news_statistics_global_ureporters">Global U-reporters</string>
    <string name="news_statistics_gender_rate">Rate by Gender</string>
    <string name="news_statistics_most_active">4 most active regions</string>
    <string name="news_statistics_age_rate">Rate by Age</string>
    <string name="answer_polls_respond">Send</string>
    <string name="answer_poll_choose_error">You need to choose an answer!</string>
    <string name="confirm_neutral_dialog_button">Ok</string>
    <string name="answer_poll_greetings_title">Congratulations!</string>
    <string name="answer_poll_greeting_message">Thank you for participating in this poll, the outcomes will be available soon.</string>
    <string name="label_poll_results">More details</string>
    <string name="label_poll_region_results">Result by Region</string>
    <string name="poll_results_by_region">See results by region</string>
    <string name="menu_notifications_title">Notifications</string>
    <string name="label_profile">Profile</string>
    <string name="label_edit">Edit</string>
    <string name="label_logout">Logout</string>
    <string name="profile_my_stories">My stories</string>
    <string name="profile_answered_polls">Answered Polls</string>
    <string name="profile_ranking">Ranking</string>
    <string name="list_stories_error">You did not publish any story so far.</string>
    <string name="profile_polls">Polls: %1$s</string>
    <string name="profile_stories">Stories: %1$s</string>
    <string name="menu_points">Points: %1$s</string>
    <string name="label_chat_groups">Open Groups</string>
    <string name="chat_groups_join">Join</string>
    <string name="chat_rooms">My chats</string>
    <string name="chat_invite_contacts_title">Send a SMS to invite your friends</string>
    <string name="chat_contact_invite_button">Invite</string>
    <string name="chat_invite">Invite</string>
    <string name="label_new_chat">New chat</string>
    <string name="chat_create_group_title">Create a Group</string>
    <string name="chat_ureporters">Users</string>
    <string name="chat_group_title_hint">Group title</string>
    <string name="chat_private_group_title">Private group</string>
    <string name="chat_new_invite_ureporters">Search Users</string>
    <string name="chat_new_invite_ureporters_count">%1$s users</string>
    <string name="label_save">Save</string>
    <string name="chat_create_result_title">Success!</string>
    <string name="chat_create_group_result_message">The group was created with success!</string>
    <string name="chat_group_description_hint">Description</string>
    <string name="label_create_group">Create group</string>
    <string name="chat_create_individual_message">Do you want to create a new chat room with this user?</string>
    <string name="error_chat_create_individual">You already have a chat room with this user. It\'s not possible to duplicate.</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="label_action_notifications">Notifications</string>
    <string name="about_content">
        Honey Bee Network is a crucible of like-minded individuals, innovators, farmers, scholars, academicians, policy makers, entrepreneurs and non-governmental organizations (NGOs).
        \n\nA Network having presence in more than seventy five countries, what has made Honey Bee Network tight knit and efficiently functional is its philosophy. Honey Bee signifies a philosophy of discourse, which is authentic, accountable and fair.
        \n\nThe Network has been woven around three basic ideals. The Network believes that a knowledge system in order to become sustainable has to be both just and fair. Hence, while collecting knowledge from the knowledge holder, the Network has made it a norm to acknowledge the knowledge provider with name and reference, if otherwise not desired by the knowledge provider. This particular practice has come handy in protecting the IPR of the knowledge provider. In the second place, the source of knowledge i.e. in the case of Honey Bee Network, the traditional knowledge holders and grassroots innovators must be acknowledged, if otherwise desired so by the knowledge holders themselves.
        \n\nFinally, any proceed that accrues from the value addition of local traditional knowledge and innovation; a fair and reasonable share must go back to the knowledge holders. These have been the guiding principles of the Network, which are fundamental to the functioning of the network and constitute the major non-negotiable for the Network.
    </string>
    <string name="label_about_ureport">About Honeybee Network</string>
    <string name="about_subtitle">Who are we?</string>
    <string name="donation_subtitle">When you make \na donation...</string>
    <string name="label_make_donation_subtitle">Make\nDonation</string>
    <string name="make_donations_content">You help UNICEF save children and transform lives by working for a more just and secure world for young people.  You can make a difference now!</string>
    <string name="label_donation">Donate Now</string>
    <string name="chat_room_message_hint">Write a message</string>
    <string name="label_action_search">Search</string>
    <string name="label_leave_group">Leave Group</string>
    <string name="chat_group_info_created_date">Created by %1$s, %2$S</string>
    <string name="label_group_info">Group info</string>
    <string name="chat_group_leave">Do you really want to leave this group?</string>
    <string name="login_validation_error_message">You need to login before making this action!\nDo you want to login now ?</string>
    <string name="label_chat">Chat</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="story_item_contribute_to_story">Contribute to this story</string>
    <string name="list_stories_header_title">Hi %1$s, share your ideas</string>
    <string name="main_menu_group_institutional">Institutional</string>
    <string name="label_settings">Settings</string>
    <string name="group_info_add_ureporter">Add user</string>
    <string name="label_group_information">Information</string>
    <string name="country_program_validation_error">You can\'t do this action for this country program!</string>
    <string name="label_group_edit">Edit group</string>
    <string name="label_answer_poll">Answer Poll</string>
    <string name="points_earning_title">Thanks for collaborate!</string>
    <string name="points_earning_subtitle">You went up in the ranking</string>
    <string name="points_earning_count_title">Points:</string>
    <string name="points_earning_ranking">Go to Ranking</string>
    <string name="points_earning_close">Close</string>
    <string name="polls_previous_title">Previous challenges</string>
    <string name="switch_country_program">Switch Country Program</string>
    <string name="about_title">About Honeybee Network</string>
    <string name="label_unicef_ambassadors">Unicef Ambassadors</string>
    <string name="ambassadors_content">
        What qualifies a singer, an actor or an athlete to represent UNICEF? And what good can celebrities really do?\n
        \n
        UNICEF’s celebrities have a wide range of talents and achievements, but they all share a commitment to improving the lives of children worldwide. And in each case a celebrity’s association with UNICEF comes about because he or she has already demonstrated that commitment.
    </string>
    <string name="ambassadors_subtitle">Goodwill\nAmbassador</string>
    <string name="ambassadors_all_button">See all Unicef Ambassadors</string>
    <string name="label_ambassadors">Ambassadors</string>
    <string name="login_error">An error occurred during the login process</string>
    <string name="login_load_user_message">Loading user information...</string>
    <string name="user_confirmation_load_message">Verifying user...</string>
    <string name="user_registering_load_message">Registering user...</string>
    <string name="caching_user_load_message">Saving user...</string>
    <string name="error_email_already_exists">That email is already being used. Please choose a different one!</string>
    <string name="error_nickname_already_exists">That nickname is already being used. Please choose a different one!</string>
</resources>