<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_login" />

    <TextView
        android:id="@+id/skipLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:text="@string/login_skip"
        fontPath="fonts/residual-25p.ttf" />

    <RelativeLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/logoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/img_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="40sp"
                android:textColor="@android:color/white"
                android:text="@string/app_name"
                fontPath="fonts/residual-25p.ttf" />

        </LinearLayout>

        <Button
            android:id="@+id/loginWithCredentials"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_purple_round_button"
            android:layout_marginTop="@dimen/logo_container_height"
            android:layout_below="@+id/logoContainer"
            android:text="@string/login"
            style="@style/AppTheme.CustomButton" />

        <Button
            android:id="@+id/loginWithTwitter"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginWithCredentials"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_light_blue_round_button"
            android:text="@string/login_twitter"
            style="@style/AppTheme.CustomButton" />

        <View
            android:layout_width="@dimen/login_item_width"
            android:layout_height="0.8dp"
            android:layout_below="@+id/loginWithTwitter"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_alignLeft="@+id/loginWithTwitter"
            android:layout_alignStart="@+id/loginWithTwitter"
            android:layout_toLeftOf="@+id/or"
            android:layout_toStartOf="@+id/or"
            android:background="#78ffffff"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/loginWithTwitter"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_alignRight="@+id/loginWithTwitter"
            android:layout_alignEnd="@+id/loginWithTwitter"
            android:layout_toRightOf="@+id/or"
            android:layout_toEndOf="@+id/or"
            android:background="#78ffffff"/>

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginWithTwitter"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/login_or"
            fontPath="fonts/residual-25p.ttf" />

        <Button
            android:id="@+id/loginWithFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/loginWithTwitter"
            android:layout_alignStart="@+id/loginWithTwitter"
            android:layout_toLeftOf="@+id/or"
            android:layout_toStartOf="@+id/or"
            android:layout_below="@+id/or"
            android:background="@drawable/shape_dark_blue_round_button"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:text="@string/login_facebook"
            fontPath="fonts/residual-25p.ttf" />

        <Button
            android:id="@+id/loginWithGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/loginWithTwitter"
            android:layout_alignEnd="@+id/loginWithTwitter"
            android:layout_toRightOf="@+id/or"
            android:layout_toEndOf="@+id/or"
            android:layout_below="@+id/or"
            android:background="@drawable/shape_red_round_button"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:text="@string/login_google"
            fontPath="fonts/residual-25p.ttf"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:text="@string/login_sign_up" />

</RelativeLayout>